# pdf-processor

./: .env.example  .gitignore  ENTREGABLES.md  EXAMPLES.md  README.md  RESUMEN_EJECUTIVO.md  STRUCTURE.md  config.py  download_slow.py  excel_processor.py  file_manager.py  file_service.py  invoce_folder_service.py  main.py  pdf_processor.py  pyproject.toml  requirements.txt  run.bat  run.ps1  utils.py
cli/: __init__.py  main.py
config/: __init__.py  config.py  hospitals.py  mappings.py  settings.py
core/: __init__.py  data_manager.py  file_normalizer.py  models.py
docs/: ARCHITECTURE.md  AUDITORIA.md
services/: __init__.py  drive_service.py  file_manager.py  folder_service.py  pdf_processor.py
src/: __init__.py  data_manager.py  drive_service.py  file_normalizer.py  folder_service.py  utils.py
src/config/: __init__.py  exceptions.py  logger.py  patterns.py  settings_data.py
src/core/: __init__.py  data_manager.py
src/services/: __init__.py  invoice_folder_service.py
utils/: __init__.py  persistence.py  text.py
